fixed overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,21 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
   font-size: 100%;
   font: inherit;
   vertical-align: baseline; }
+  
+  
+.reveal h1 {
+	font-size: 24pt;
+}
+
+.reveal h2 {
+	font-size: 18pt;
+}
+
+.reveal h3 {
+	font-size: 14pt;
+}
+
+
 
 .reveal article, .reveal aside, .reveal details, .reveal figcaption, .reveal figure,
 .reveal footer, .reveal header, .reveal hgroup, .reveal menu, .reveal nav, .reveal section {
@@ -1376,16 +1391,20 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 1.5em; }
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1.2em; 
+  text-transform: none;
+}
 
 .reveal h3 {
-  font-size: 1.3em; }
-
-.reveal h4 {
   font-size: 1em; }
+
+.reveal p {
+  font-size: .5em;
+  text-transform: none;
+  line-height: .6em;}
 
 .reveal h1 {
   text-shadow: none; }
@@ -1616,8 +1635,8 @@ body {
  * Background Styling
  *********************************************/
   
-.reveal .background {
-	opacity: .5;
-	filter: sepia(.7;
+.reveal .backgrounds {
+	opacity: .4;
+	filter: sepia(.7);
 }
   
